# AppCompat

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  configs-keep.pro
app/src/androidTest/java/app/compile/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/app/shell/: IUserService.aidl
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/app/compile/: MainActivity.kt
app/src/main/res/drawable/: ic_fragment_fast.xml  ic_fragment_task.xml  ic_fragment_valo.xml  ic_fragment_vote.xml  ic_launcher_background.xml  ic_xyn_game.xml  ic_xyn_menu.xml  ic_xyn_telegram.xml  icon_yh_xx.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/xml/: device_filter.xml  file.xml  network_security_config.xml  shortcuts.xml
app/src/test/java/app/compile/: ExampleUnitTest.java
gradle/: libs.versions.toml
